Add Team Report with role-based tabs: Sn Directors, FM Directors, RMs, FSMs, Techs

--- a/templates/index.html
+++ b/templates/index.html
@@ -258,7 +258,7 @@
         <button class="tab-btn" data-tab="trends" onclick="switchTab('trends',this)">
           📈 Trends<span class="badge bg-gradient-to-r from-green-500 to-emerald-500 text-white">NEW</span>
         </button>
-        <button class="tab-btn" data-tab="team" onclick="switchTab('team',this); renderHierarchyTab();">
+        <button class="tab-btn" data-tab="team" onclick="switchTab('team',this); renderTeamReport();">
           🏢 Team<span class="badge bg-gradient-to-r from-orange-500 to-red-500 text-white">ORG</span>
         </button>
       </div>
@@ -802,6 +802,7 @@
 <script src="/static/js/app.js"></script>
 <script src="/static/js/super.js"></script>
 <script src="/static/js/hierarchy.js"></script>
+<script src="/static/js/team_report.js"></script>
 
 </body>
 </html>
